@@ -718,7 +718,7 @@ namespace libtorrent
 				{
 					policy::peer* p = m_policy.add_peer(read_v4_endpoint<tcp::endpoint>(ptr)
 						, id, peer_info::resume_data, 0);
-					if (p) p->banned = true;
+					if (p) m_policy.ban_peer(p);
 				}
 			}
 
@@ -742,7 +742,7 @@ namespace libtorrent
 				{
 					policy::peer* p = m_policy.add_peer(read_v6_endpoint<tcp::endpoint>(ptr)
 						, id, peer_info::resume_data, 0);
-					if (p) p->banned = true;
+					if (p) m_policy.ban_peer(p);
 				}
 			}
 #endif
@@ -778,7 +778,7 @@ namespace libtorrent
 					tcp::endpoint a(address::from_string(ip, ec), (unsigned short)port);
 					if (ec) continue;
 					policy::peer* p = m_policy.add_peer(a, id, peer_info::resume_data, 0);
-					if (p) p->banned = true;
+					if (p) m_policy.ban_peer(p);
 				}
 			}
 		}
@@ -1916,7 +1916,7 @@ namespace libtorrent
 				}
 
 				// mark the peer as banned
-				p->banned = true;
+				m_policy.ban_peer(p);
 
 				if (p->connection)
 				{
